--- a/Monaco/index.html
+++ b/Monaco/index.html
@@ -2465,7 +2465,7 @@ function loadTabs() {
         }
 
         function addTab(title, content = '', id = null) {
-    const defaultText = "-- Axle, the best free alternative to Synapse Z. https://discord.gg/TMzedKjDS5\nprint('Hello, World!')";    
+    const defaultText = "-- Axle, the best free alternative to Synapse Z. https://discord.gg/TMzedKjDS5\n-- Use CTRL + or - to zoom in or out if the UI is too big/small for you.\nprint('Hello, World!')";    
     if (!content) {
         content = defaultText;
     }
